// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsNotification should render correctly as notification 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 24,
      },
      null,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#d73847",
          "fontSize": 16,
        },
        {
          "marginRight": 4,
        },
        {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  this is a notification
</View>
`;

exports[`SettingsNotification should render correctly as warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 10,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 10,
        "padding": 12,
        "width": "100%",
      },
      {
        "backgroundColor": "#d738471a",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#d73847",
          "fontSize": 16,
        },
        {
          "marginRight": 4,
        },
        {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  this is a warning
</View>
`;
